Fixed a bug where prev page was not showing up when flipping pages on sample book. This was because div id='bb-bookblock' needed to have class also set to bb-bookblock.
Plus, minor cosmetic changes.

	modified:   css/bookblock.css
	modified:   css/main.css
	modified:   ../index.html

--- a/assets/css/bookblock.css
+++ b/assets/css/bookblock.css
@@ -1,8 +1,6 @@
 
 
 .bb-page {
-	width: 100%;
-	height: 100%;
 	position: absolute;
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
@@ -11,7 +9,7 @@
 
 }
 
-.bb-page img {
+img {
 	width: 100%;
 	height: 100%;
 	/* object-fit: contain; */
@@ -168,13 +166,6 @@
 	/* background: #fff; */
 
 }
-
-.bb-item img {
-	width: 100%;
-	height: 100%;
-	/* object-fit: contain; */
-}
-
 
 /* No JS */
 .no-js .bb-bookblock, 
