--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -256,9 +256,10 @@ h2 {
   position: fixed; 
   display: none;
   z-index: 20;
-  overflow: auto; /* Enable scroll if needed */
+  /* overflow: hidden; */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  /* background-color: white; */
   top: 0;
   left: 0;
   width: 100vw;
@@ -283,7 +284,10 @@ h2 {
   font-size: 10px;
   /* width: 100%;
   height: 100%; */
-	position: absolute;
+	position: relative;
+  margin: auto;
+  z-index: 100;
+
 	-webkit-perspective: 1300px;
 	perspective: 1300px;
 	-webkit-backface-visibility: hidden;
